resolved biblatex incompatibility as per https://github.com/leinardi/europecv2013/pull/15/commits/2c021475dfc65b5b8b21c00bb800c2463cb80d43

--- a/europecv2013.cls
+++ b/europecv2013.cls
@@ -31,7 +31,7 @@
 % CV models and instructions:
 %   http://europass.cedefop.europa.eu/en/documents/curriculum-vitae/templates-instructions
 
-\DeclareRobustCommand\ecv@utf[1]{{\inputencoding{utf8x}#1}}
+\DeclareRobustCommand\ecv@utf[1]{{\inputencoding{utf8}#1}} % https://github.com/leinardi/europecv2013/pull/15/commits/2c021475dfc65b5b8b21c00bb800c2463cb80d43
 
 % Set language
 \DeclareOption{english}{%
@@ -232,7 +232,6 @@
 \DeclareOption{cp1257}{\AtEndOfClass{\inputencoding{cp1257}}}
 \DeclareOption{ansinew}{\AtEndOfClass{\inputencoding{ansinew}}}
 \DeclareOption{utf8}{\AtEndOfClass{\inputencoding{utf8}}}
-\DeclareOption{utf8x}{\AtEndOfClass{\inputencoding{utf8x}}}
 \DeclareOption{koi8-r}{\AtEndOfClass{\inputencoding{koi8-r}}}
 \DeclareOption{koi8-ru}{\AtEndOfClass{\inputencoding{koi8-ru}}}
 \DeclareOption{koi8-u}{\AtEndOfClass{\inputencoding{koi8-u}}}
@@ -290,8 +289,7 @@
 \ProcessOptions\relax
 
 \LoadClass[\ecv@fontsize]{extarticle}
-\RequirePackage{ucs}
-\RequirePackage[utf8x]{inputenc}
+\RequirePackage[utf8]{inputenc} % https://github.com/leinardi/europecv2013/pull/15/commits/2c021475dfc65b5b8b21c00bb800c2463cb80d43
 \RequirePackage{array}
 \RequirePackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \RequirePackage{longtable}
